Modificando carpeta de imágenes

--- a/alumno.html
+++ b/alumno.html
@@ -32,7 +32,10 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="#" id="link-alumnos">People</a></li>
+                          <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="#"id="link-planets">Planets</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#"id="link-pupilos">Alumnos</a></li>
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="#">Módulos</a></li>
                         </ul>
@@ -49,14 +52,16 @@
         <!--FIN NAVBAR-->    
         <!--INICIO LISTA NOMBRES-->
         <div class="row mt-5" id="people-list">
-                          
-
         </div> 
         <!--FIN LISTA NOMBRES-->
-        <!--INICIO LISTA NOMBRES-->
+        <!--INICIO LISTA PLANETAS-->
         <div class="row mt-2" id="planets-list">
-          
         </div>  
+        <!--FIN LISTA PLANETAS-->
+        <!--INICIO LISTA ALUMNOS-->
+        <div class="row mt-2" id="lista-alumnos">
+        </div>  
+        <!--FIN LISTA ALUMNOS-->
       </div>
     </div>
     <script src="assets/js/jquery-3.6.0.min.js"></script>
